neutron (2015.1~b2-1) UNRELEASED; urgency=medium

  * New upstream release.
  * Updated (build-)depends for this release.

 -- Thomas Goirand <zigo@debian.org>  Wed, 24 Dec 2014 15:10:00 +0800

neutron (2014.2.1-1) experimental; urgency=medium

  * New upstream release.
  * cve-2014-7821_DoS_through_invalid_DNS_configuration_juno.patch is now
    applied upstream, so removed it.
  * Now build-depends on openstack-pkg-tools (>= 20~).

 -- Thomas Goirand <zigo@debian.org>  Fri, 12 Dec 2014 23:02:10 +0800

neutron (2014.2-4) experimental; urgency=medium

  * CVE-2014-7821: DoS through invalid DNS configuration. Applied upstream
    patch: Fix hostname regex pattern (Closes: #770431).

 -- Thomas Goirand <zigo@debian.org>  Fri, 21 Nov 2014 16:39:03 +0800

neutron (2014.2-3) experimental; urgency=medium

  * Patches the ml2 plugin ini file to be like the install-guide by default.
  * Added defaults-closer-to-install-guide.patch to have l3 and dhcp init files
    match what the install-guide proposes as configuration.

 -- Thomas Goirand <zigo@debian.org>  Thu, 23 Oct 2014 14:59:07 +0800

neutron (2014.2-2) experimental; urgency=medium

  * Removed arping from depends of python-neutron, and put iputils-arping as
    Recommends:.

 -- Thomas Goirand <zigo@debian.org>  Thu, 16 Oct 2014 15:17:02 +0000

neutron (2014.2-1) experimental; urgency=medium

  * New upstream release.

 -- Thomas Goirand <zigo@debian.org>  Thu, 16 Oct 2014 14:52:35 +0000

neutron (2014.2~rc2-1) experimental; urgency=medium

  * New upstream release.
  * Updated (build-)depends for this release.
  * Added ipset, iproute2, arping and keepalived as dependency.
  * Now using a single logrotate file in neutron-common.

 -- Thomas Goirand <zigo@debian.org>  Fri, 10 Oct 2014 23:11:10 +0800

neutron (2014.2~rc1-3) experimental; urgency=medium

  * Fixed debconf template and ran debconf-updatepo.
  * Another fix for the SQLite Alembic migrations.
